adding social media

--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                 You can learn Programming in arabic for free
             </p>
             <div class="social-media">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-envelope"></i></a>
+                <a href="https://www.facebook.com/challenges.mentality?locale=ar_AR" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://whatsapp.com/channel/0029Va27RgFLikgGaUwNRP34" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.youtube.com/@mentality-jc1vy/featured" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.instagram.com/mentality.1m/?hl=ar" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/mentality-eg" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="mailto:mentality.learning@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                 <a href="#"
                 data-bs-toggle="tooltip" 
                 data-bs-placement="top"
@@ -135,7 +135,7 @@
                 <!-- <a href="#"><i class="fab fa-google-play"></i></a>
                 <a href="#"><i class="fab fa-app-store"></i></a> -->
             </div>
-            <a href="#a" class="btn">Start Now</a>
+            <a href="#services" class="btn">Start Now</a>
         </div>
     </section>
 
