edit courses links

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <h3>HTML</h3>
                 <p>Unlock the power of the web and gain the skills to create and structure web pages with our HTML course!</p>
                 <a 
-                href="#" 
+                href="#a" 
                 class="btn"
                 data-bs-toggle="tooltip" 
                 data-bs-placement="top"
@@ -183,7 +183,7 @@
                 <h3>CSS</h3>
                 <p>Elevate your web design skills with layouts and beautiful user interfaces in our CSS course!</p>
                 <a 
-                href="#" 
+                href="#a" 
                 class="btn"
                 data-bs-toggle="tooltip" 
                 data-bs-placement="top"
@@ -196,7 +196,7 @@
                 <h3>JavaScript</h3>
                 <p>Unleash the full potential of web development with our JavaScript course! JavaScript is the dynamic and interactive backbone of the modern web.</p>
                 <a 
-                href="#" 
+                href="#a" 
                 class="btn"
                 data-bs-toggle="tooltip" 
                 data-bs-placement="top"
