--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                     <span class="overlay"></span>
         
                     <div class="card-image">
-                        <img src="https://drive.google.com/file/d/1NktZkfHXpKl_NnJ0yo4ktBA8KraTKUCg/view?usp=drive_link" alt="" class="card-img">
+                        <img src="https://drive.google.com/file/d/1NktZkfHXpKl_NnJ0yo4ktBA8KraTKUCg/view?usp=drive_link" alt="team member image" class="card-img">
                     </div>
                     </div>
     
