--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                     <span class="overlay"></span>
         
                     <div class="card-image">
-                        <img src="img/team/abdelrahmanmahmoud.PNG" alt="" class="card-img">
+                        <img src="img/team/abdelrahmanmahmoud.png" alt="" class="card-img">
                     </div>
                     </div>
     
