--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <span class="overlay"></span>
         
                     <div class="card-image">
-                        <img src="img/team/ahmedadel.png" alt="" class="card-img">
+                        <img src="img/Team/ahmedadel.png" alt="" class="card-img">
                     </div>
                     </div>
     
